--- a/VulcanForWindows/MainPanelPage.xaml
+++ b/VulcanForWindows/MainPanelPage.xaml
@@ -122,24 +122,7 @@
                         </ListView.ItemContainerStyle>
                         <ListView.ItemTemplate>
                             <DataTemplate x:DataType="attendance:Lesson">
-                                <Grid Background="{StaticResource LayerOnAccentAcrylicFillColorDefaultBrush}" 
-                                        HorizontalAlignment="Stretch" 
-                                        CornerRadius="6" Margin="3" Padding="5"  VerticalAlignment="Stretch">
-
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="{x:Bind No}" TextAlignment="Center" VerticalAlignment="Stretch" Padding="10,2,10,0" FontWeight="SemiBold" FontSize="24"/>
-
-                                        <StackPanel HorizontalAlignment="Stretch">
-                                            <TextBlock Text="{x:Bind Subject.Name}"/>
-                                            <TextBlock Text="{x:Bind PresenceType.Name}"/>
-                                        </StackPanel>
-                                    </StackPanel>
-                                    <StackPanel HorizontalAlignment="Right" Spacing="4" >
-                                        <TextBlock  VerticalAlignment="Bottom"  TextAlignment="Right" Text="{x:Bind Date, Converter={StaticResource DateTimeConverter}}" FontSize="10"/>
-                                        <controls:JustificationRequestStatus Value="{x:Bind JustificationStatus}" Context="{x:Bind PresenceType}" DisplayForAccepted="True" 
-                                                                         HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
-                                    </StackPanel>
-                                </Grid>
+                                <controls:AttendanceLessonItem Value="{x:Bind}" DisplayDate="True"/>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
