--- a/VulcanForWindows/MainWindow.xaml
+++ b/VulcanForWindows/MainWindow.xaml
@@ -43,7 +43,12 @@
 
                 </NavigationViewItem>
                 <NavigationViewItem Icon="Save" Content="Plan Lekcji" Tag="TimetablePage" />
-                <NavigationViewItem Icon="Save" Content="Obecność" Tag="AttendancePage" />
+                <NavigationViewItem Icon="Save" Content="Obecność" Tag="AttendancePage">
+                    <NavigationViewItem.MenuItems>
+                        <NavigationViewItem Content="Ostatnie" ToolTipService.ToolTip="Wyświetl ostatnie obecności" Tag="AttendancePage"/>
+                        <NavigationViewItem Content="Podsumowanie" ToolTipService.ToolTip="Wyświetl podsumowanie frekwencji" Tag="AttendanceReportPage"/>
+                    </NavigationViewItem.MenuItems>
+                </NavigationViewItem>
                 <NavigationViewItem Icon="Save" Content="test" Tag="BlankPage1" />
                 <!--<NavigationViewItem Icon="Refresh" Content="Menu Item3" Tag="SamplePage3" />
                 <NavigationViewItem Icon="Download" Content="Menu Item4" Tag="SamplePage4" />-->
