--- a/VulcanForWindows/MainPanelPage.xaml
+++ b/VulcanForWindows/MainPanelPage.xaml
@@ -85,14 +85,16 @@
               VariableSizedWrapGrid.ColumnSpan="4" VariableSizedWrapGrid.RowSpan="8" Tapped="LoadPage" Tag="AttendancePage">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <StackPanel Style="{StaticResource TitleStack}">
                 <Image Source="/Assets/GradesIcon.png" Style="{StaticResource HeaderImage}"/>
                 <TextBlock Style="{StaticResource HeaderText}">Obecność</TextBlock>
             </StackPanel>
+            <controls:SummaryAverageGradeDisplayer Title="Obecność" Average="{x:Bind PresentPercentDisplay, Mode=OneWay}" Grid.Row="1"/>
             <Grid Visibility="{x:Bind att.isLoaded, Converter={StaticResource VisibilityConverter}, Mode=OneWay}"
-                Grid.Row="1">
+                Grid.Row="2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="25"/>
                     <RowDefinition Height="*"/>
@@ -128,7 +130,7 @@
                     </ListView>
                 </Grid>
             </Grid>
-            <ProgressRing Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"
+            <ProgressRing Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center"
                           IsActive="{x:Bind att.isLoading, Mode=OneWay}"/>
         </Grid>
 
@@ -142,7 +144,7 @@
                 <Image Source="/Assets/GradesIcon.png" Style="{StaticResource HeaderImage}"/>
                 <TextBlock Style="{StaticResource HeaderText}">Plan lekcji</TextBlock>
                 <TextBlock FontWeight="SemiBold" FontSize="12" VerticalAlignment="Bottom" Margin="2" Text="{x:Bind displayDay.Date, Converter={StaticResource DateTimeConverter}, Mode=OneWay}"/>
-                </StackPanel>
+            </StackPanel>
             <Grid Visibility="{x:Bind displayDayLoaded, Converter={StaticResource VisibilityConverter}, Mode=OneWay}"
                 Grid.Row="1">
                 <controls:TimetableDayDisplayer Value="{x:Bind displayDay, Mode=OneWay}" DisplayDate="False"/>
