Back button in navigation is now functional

--- a/VulcanForWindows/MainWindow.xaml
+++ b/VulcanForWindows/MainWindow.xaml
@@ -28,7 +28,7 @@
             <Image Source="/Assets/StoreLogo.png" Height="16" Width="16" Grid.Column="1" VerticalAlignment="Center"/>
             <TextBlock Style="{StaticResource AppTitle}" Grid.Column="2">Vulcan dla Windows</TextBlock>
         </Grid>
-        <NavigationView x:Name="nvSample" Grid.Row="2" PaneDisplayMode="Top" SelectionChanged="NavigationChangedPage">
+        <NavigationView x:Name="nvSample" Grid.Row="2" PaneDisplayMode="Top" SelectionChanged="NavigationChangedPage" BackRequested="BackRequested">
             <NavigationView.MenuItems>
                 <NavigationViewItem Icon="Home" Tag="MainPanelPage" />
 
